Fixed ReplyMarkups and other minimal changes